adding reset password and pagination
