# app/models/article.js
@@ -1,3 +1,5 @@
+const sequelizePaginate = require('sequelize-paginate')
+
 module.exports = (sequelize, Sequelize) => {
   const Article = sequelize.define('articles', {
     title: {
@@ -7,6 +9,7 @@ module.exports = (sequelize, Sequelize) => {
       type: Sequelize.TEXT,
     },
   });
+  sequelizePaginate.paginate(Article);
 
   return Article;
 };
