# app/models/user.js
@@ -1,3 +1,5 @@
+const sequelizePaginate = require('sequelize-paginate')
+
 module.exports = (sequelize, Sequelize) => {
   const User = sequelize.define('users', {
     name: {
@@ -15,7 +17,14 @@ module.exports = (sequelize, Sequelize) => {
     avatar: {
       type: Sequelize.STRING,
     },
+    reset_password_token: {
+      type: Sequelize.STRING,
+    },
+    reset_password_expires: {
+      type: Sequelize.DATE,
+    },
   });
+  sequelizePaginate.paginate(User);
 
   return User;
 };
