# swagger.json
@@ -105,13 +105,168 @@
         "deprecated": false
       }
     },
+    "/api/auth/forgot-password": {
+      "get": {
+        "tags": ["AUTH"],
+        "summary": "Forgot password page",
+        "description": "Forgot password page",
+        "operationId": "ForgotPasswordPage",
+        "parameters": [],
+        "responses": {
+          "200": {
+            "description": "Forgot password page retrieved"
+          },
+          "404": {
+            "description": "User not found"
+          },
+          "500": {
+            "description": "Server error"
+          }
+        },
+        "deprecated": false
+      },
+      "post": {
+        "tags": ["AUTH"],
+        "summary": "Forgot password",
+        "description": "Generating reset password url",
+        "operationId": "ForgotPassword",
+        "parameters": [],
+        "requestBody": {
+          "description": "",
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/ForgotPasswordRequest"
+              },
+              "example": {
+                "email": "donirahmatiana@gmail.com"
+              }
+            }
+          },
+          "required": true
+        },
+        "responses": {
+          "200": {
+            "description": "Forgot password page retrieved"
+          },
+          "404": {
+            "description": "User not found"
+          },
+          "500": {
+            "description": "Server error"
+          }
+        },
+        "deprecated": false
+      }
+    },
+    "/api/auth/reset-password": {
+      "get": {
+        "tags": ["AUTH"],
+        "summary": "Reset password page",
+        "description": "Reset password page",
+        "operationId": "ResetPasswordPage",
+        "parameters": [
+          {
+            "in": "query",
+            "name": "token",
+            "schema": {
+              "type": "string"
+            },
+            "description": "user's reset password token",
+            "required": true
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Reset password page retrieved"
+          },
+          "400": {
+            "description": "Password reset token is invalid or has expired"
+          },
+          "404": {
+            "description": "User not found"
+          },
+          "422": {
+            "description": "Password confirmation does not match"
+          },
+          "500": {
+            "description": "Server error"
+          }
+        },
+        "deprecated": false
+      },
+      "post": {
+        "tags": ["AUTH"],
+        "summary": "Reset password",
+        "description": "Reset password",
+        "operationId": "ResetPassword",
+        "parameters": [],
+        "requestBody": {
+          "description": "",
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/ResetPasswordRequest"
+              },
+              "example": {
+                "newPassword": "123456789",
+                "verifyPassword": "123456789",
+                "token": "e37d626e8397dda4b6b0cf59f493900dd5530899"
+              }
+            }
+          },
+          "required": true
+        },
+        "responses": {
+          "200": {
+            "description": "Password successfully updated"
+          },
+          "400": {
+            "description": "Password reset token is invalid or has expired"
+          },
+          "404": {
+            "description": "User not found"
+          },
+          "422": {
+            "description": "Password confirmation does not match"
+          },
+          "500": {
+            "description": "Server error"
+          }
+        },
+        "deprecated": false
+      }
+    },
     "/api/articles": {
       "get": {
         "tags": ["ARTICLES"],
         "summary": "Read Articles",
         "description": "Get all articles",
         "operationId": "ReadArticles",
-        "parameters": [],
+        "parameters": [
+          {
+            "in": "query",
+            "name": "page",
+            "schema": {
+              "type": "integer",
+              "minimum": 1,
+              "default": 1
+            },
+            "description": "page number of data",
+            "required": false
+          },
+          {
+            "in": "query",
+            "name": "paginate",
+            "schema": {
+              "type": "integer",
+              "minimum": 1,
+              "default": 20
+            },
+            "description": "total maximum data per page",
+            "required": false
+          }
+        ],
         "responses": {
           "200": {
             "description": "Get articles success"
@@ -413,6 +568,28 @@
               "type": "integer",
               "minimum": 1
             }
+          },
+          {
+            "in": "query",
+            "name": "page",
+            "schema": {
+              "type": "integer",
+              "minimum": 1,
+              "default": 1
+            },
+            "description": "page number of data",
+            "required": false
+          },
+          {
+            "in": "query",
+            "name": "paginate",
+            "schema": {
+              "type": "integer",
+              "minimum": 1,
+              "default": 20
+            },
+            "description": "total maximum data per page",
+            "required": false
           }
         ],
         "security": [
@@ -459,6 +636,28 @@
               "type": "integer",
               "minimum": 1
             }
+          },
+          {
+            "in": "query",
+            "name": "page",
+            "schema": {
+              "type": "integer",
+              "minimum": 1,
+              "default": 1
+            },
+            "description": "page number of data",
+            "required": false
+          },
+          {
+            "in": "query",
+            "name": "paginate",
+            "schema": {
+              "type": "integer",
+              "minimum": 1,
+              "default": 20
+            },
+            "description": "total maximum data per page",
+            "required": false
           }
         ],
         "security": [
@@ -611,6 +810,28 @@
               "type": "integer",
               "minimum": 1
             }
+          },
+          {
+            "in": "query",
+            "name": "page",
+            "schema": {
+              "type": "integer",
+              "minimum": 1,
+              "default": 1
+            },
+            "description": "page number of data",
+            "required": false
+          },
+          {
+            "in": "query",
+            "name": "paginate",
+            "schema": {
+              "type": "integer",
+              "minimum": 1,
+              "default": 20
+            },
+            "description": "total maximum data per page",
+            "required": false
           }
         ],
         "security": [
@@ -647,7 +868,30 @@
         "summary": "Read Users",
         "description": "Admin get all user",
         "operationId": "ReadUsers",
-        "parameters": [],
+        "parameters": [
+          {
+            "in": "query",
+            "name": "page",
+            "schema": {
+              "type": "integer",
+              "minimum": 1,
+              "default": 1
+            },
+            "description": "page number of data",
+            "required": false
+          },
+          {
+            "in": "query",
+            "name": "paginate",
+            "schema": {
+              "type": "integer",
+              "minimum": 1,
+              "default": 20
+            },
+            "description": "total maximum data per page",
+            "required": false
+          }
+        ],
         "security": [
           {
             "httpBearer": []
@@ -873,7 +1117,30 @@
         "summary": "Read Articles",
         "description": "Admin get all articles",
         "operationId": "GetReadArticles",
-        "parameters": [],
+        "parameters": [
+          {
+            "in": "query",
+            "name": "page",
+            "schema": {
+              "type": "integer",
+              "minimum": 1,
+              "default": 1
+            },
+            "description": "page number of data",
+            "required": false
+          },
+          {
+            "in": "query",
+            "name": "paginate",
+            "schema": {
+              "type": "integer",
+              "minimum": 1,
+              "default": 20
+            },
+            "description": "total maximum data per page",
+            "required": false
+          }
+        ],
         "security": [
           {
             "httpBearer": []
@@ -992,7 +1259,30 @@
         "summary": "Read Comments",
         "description": "Admin get comments",
         "operationId": "GetReadComments",
-        "parameters": [],
+        "parameters": [
+          {
+            "in": "query",
+            "name": "page",
+            "schema": {
+              "type": "integer",
+              "minimum": 1,
+              "default": 1
+            },
+            "description": "page number of data",
+            "required": false
+          },
+          {
+            "in": "query",
+            "name": "paginate",
+            "schema": {
+              "type": "integer",
+              "minimum": 1,
+              "default": 20
+            },
+            "description": "total maximum data per page",
+            "required": false
+          }
+        ],
         "security": [
           {
             "httpBearer": []
@@ -1204,6 +1494,36 @@
           "name": "User updated",
           "username": "UserUpdated",
           "email": "userUpdated@gmail.com"
+        }
+      },
+      "ForgotPasswordRequest": {
+        "title": "ForgotPasswordRequest",
+        "required": [],
+        "type": "object",
+        "properties": {
+          "email": {
+            "type": "string"
+          }
+        },
+        "example": {
+          "email": "donirahmatiana@gmail.com"
+        }
+      },
+      "ResetPasswordRequest": {
+        "title": "ResetPasswordRequest",
+        "required": [],
+        "type": "object",
+        "properties": {
+          "email": {
+            "newPassword": "string",
+            "verifyPassword": "string",
+            "token": "string"
+          }
+        },
+        "example": {
+          "newPassword": "123456789",
+          "verifyPassword": "123456789",
+          "token": "e37d626e8397dda4b6b0cf59f493900dd5530899"
         }
       }
     },
